<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--<string name="servidor_rest">http://LAPTOP-PAULO:8080/OlheiroDigitalServer</string>-->
    <string name="servidor_rest">http://olheiroserver-env.elasticbeanstalk.com</string>
    <string name="app_name">Tennis Scout Notebook</string>
    <string name="hello">Hello CadernoTenista!</string>
    <string name="action_settings">Configurations</string>
    <string name="inicio">00:00:00</string>
    <string name="iniciar_partida">Match Start</string>
    <string name="iniciar_set">Start Set</string>
    <string name="terminar_set">End Set</string>
    <string name="terminar_partida">End Match</string>
    <string name="jogador_passe_certo">Right Pass</string>
    <string name="jogador_passe_errado">Wrong Pass</string>
    <string name="adicione_jogador">Add Player</string>
    <string name="escolha_time">Pick player\'s team</string>
    <string name="jogador">Player</string>
    <string name="delete">Delete</string>
    <string name="alterar_nome">Alter</string>
    <string name="defina_nome_jogador">Player\'s Name</string>
    <string name="escolher_eventos">Events</string>
    <string name="jogador_chute_a_gol_defendido">Goal Kick: Defended</string>
    <string name="jogador_chute_a_gol_fora">Goal Kick: Out</string>
    <string name="jogador_chute_a_gol_gol">Goal Kick: Goal</string>
    <string name="jogador_lancamento_certo">Correct Stroke</string>
    <string name="jogador_lancamento_errado">Wrong Stroke</string>
    <string name="jogador_drible_certo">Correct Dribble</string>
    <string name="jogador_drible_errado">Wrong Dribble</string>
    <string name="jogador_desarme_recuperacao">Disarm: Recovery</string>
    <string name="jogador_desarme_falta">Disarm: Foul</string>
    <string name="jogador_desarme_tentativa">Disarm: Attempt</string>
    <string name="jogador_interceptacao_certa">Correct Interception</string>
    <string name="jogador_interceptacao_errada">Wrong Interception</string>
    <string name="jogador_falta_sofrida">Suffered Foul</string>
    <string name="escolha_eventos">Choose Events</string>
    <string name="ok">Ok</string>
    <string name="cancelar">Cancel</string>
    <string name="drawer_open">Choose an action</string>
    <string name="drawer_close">Closed</string>
    <string name="data_inicio">Started at:</string>
    <string name="terminou_prim_tempo_em">End First Quarter:</string>
    <string name="comecou_segundo_tempo_em">Start Second Quarter:</string>
    <string name="terminou_segundo_tempo_em">End Second Quarter:</string>
    <string name="passes_anotados">Noted Passes:</string>
    <string name="local">Location:</string>
    <string name="remover_partida">Remove Match</string>
    <string name="enviar_partida">Export Match</string>
    <string name="escolha_acao">Choose Action</string>
    <string name="nome_diretorio_geracao">SoccerScout</string>
    <string name="erro_exportacao">An error has ocurred when exporting the match.</string>
    <string name="sem_localidade_definida">Unknown</string>
    <string name="sem_data_inicio_definida">Not Started</string>
    <string name="sem_data_fim_primeiro_tempo_definida">Not Ended</string>
    <string name="partida_enviada">Match was exported succesfully</string>
    <string name="escolha_localidade">Define match\'s Location</string>
    <string name="escolher_local">Location</string>
    <string name="alterar_tipos_passe_jogador">Alter Events</string>
    <string name="antes_jogo">Before Match</string>
    <string name="primeiro_tempo">First Quarter</string>
    <string name="intervalo">Interval</string>
    <string name="segundo_tempo">Second Quarter</string>
    <string name="apos_jogo">After Match</string>
    <string name="indefinida">Undefined</string>
    <string name="desenvolvedor">Developer:</string>
    <string name="paulo_contopoulos">Paulo Contopoulos</string>
    <string name="versao_beta">Beta Version</string>
    <string name="colaboracao">In Colaboration With:</string>
    <string name="olhar_digital">Olheiro Digital</string>
    <string name="avaliacao_disclaimer">This version is For evaluation purposes only. Not for commercial use!</string>
    <string name="video_passes">Watch video from the plays</string>
    <string name="passes_de">Plays from</string>
    <string name="escolha_arquivo">Choose File</string>
    <string name="ultimo_envio">Sent to Server:</string>
    <string name="nao_enviado">Not sent.</string>
    <string name="reenviando_partida">Trying to send match again.</string>
    <string name="lado_1">First Side</string>
    <string name="lado_2">Second Side</string>
    <string name="selecione_video_primeiro_set">Choose video for first Set.</string>
    <string name="selecione_video_segundo_set">Choose video for second Set.</string>
    <string name="nao_encontrado">Not found.</string>

</resources>