<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/ListEntry"
                >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local"
            android:id="@+id/label_local"
            android:paddingLeft="3dp"
            style="@style/ListHeader"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_lista_partidas_local"
            android:text="Empty"
            android:layout_toRightOf="@id/label_local"
            android:paddingLeft="3dp"
            style="@style/ListValue"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_inicio"
            android:id="@+id/label_data_inicio"
            android:paddingLeft="3dp"
            android:layout_below="@id/label_local"
            style="@style/ListHeader"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_lista_partidas_data_inicio"
            android:text="Empty"
            android:layout_toRightOf="@id/label_data_inicio"
            android:layout_below="@id/item_lista_partidas_local"
            android:paddingLeft="3dp"
            style="@style/ListValue"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passes_anotados"
            android:paddingLeft="3dp"
            android:id="@+id/label_passes_anotados"
            android:layout_below="@id/label_data_inicio"
            style="@style/ListHeader"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_lista_partidas_passes_anotados"
            android:text="Empty"
            android:layout_toRightOf="@id/label_passes_anotados"
            android:layout_below="@id/item_lista_partidas_data_inicio"
            android:paddingLeft="3dp"
            style="@style/ListValue"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ultimo_envio"
            android:paddingLeft="3dp"
            android:id="@+id/label_enviado_em"
            android:layout_below="@id/label_passes_anotados"
            style="@style/ListHeader"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_lista_partidas_enviado_em"
            android:text="Empty"
            android:layout_toRightOf="@id/label_enviado_em"
            android:layout_below="@id/item_lista_partidas_passes_anotados"
            android:paddingLeft="3dp"
            style="@style/ListValue"
            />



</RelativeLayout>